k8s/02-traefik-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: church-dashboard-v2-treafik-ingress
  namespace: kube-system
  annotations:
    k8s.kuboard.cn/displayName: church-dashboard-v2-treafik
    k8s.kuboard.cn/workload: church-dashboard-v2-treafik
    kubernetes.io/ingress.class: "traefik-internet"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure, web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-http-redirect-https@kubernetescrd,
                                                      kube-system-http-redirect-https-testing@kubernetescrd,
                                                      kube-system-common-headers@kubernetescrd

spec:
  tls:
    - hosts:
        - dashboard.xpool.top
      secretName: xpool-top-cert
    - hosts:
        - procdashboard.xpool.top
      secretName: xpool-top-cert
  rules:
    - host: dashboard.xpool.top
      http: &http_rules
        paths:
          - path: /
            backend:
              serviceName: church-dashboard-v2
              servicePort: 80
    - host: procdashboard.xpool.top
      http: *http_rules
